--- a/less/styles.less
+++ b/less/styles.less
@@ -29,15 +29,3 @@
     border:4px solid #fff;
     box-shadow:0 0 4px rgba(0, 0, 0, 0.3);
 }
-@media screen and (max-width: 320px) {
-	body {
-		background: #ccc;
-	}
-	.grid-container,
-	.grid-container-fluid {
-		width: 95%;
-		max-width: 300px;
-	}
-
-
-}
